--- a/Assets/BehaviourTree/Editor/BehaviourTreeEditor.uss
+++ b/Assets/BehaviourTree/Editor/BehaviourTreeEditor.uss
@@ -4,3 +4,7 @@ GridBackground {
     --thick-line-color: rgba(193, 196, 192, 0.1);
     --spacing: 15;
 }
+
+#panelTitle {
+    background-color: rgb(40, 40, 40);
+}
