--- a/Assets/BehaviourTree/Editor/BehaviourTreeEditor.uxml
+++ b/Assets/BehaviourTree/Editor/BehaviourTreeEditor.uxml
@@ -3,13 +3,13 @@
     <uie:Toolbar>
         <uie:ToolbarMenu tabindex="-1" parse-escape-sequences="true" display-tooltip-when-elided="true" text="Assets" />
     </uie:Toolbar>
-    <BT_SplitView>
-        <ui:VisualElement name="left-panel" style="flex-grow: 1;">
-            <ui:Label tabindex="-1" text="Label" parse-escape-sequences="true" display-tooltip-when-elided="true" name="panelTitle" />
-            <BT_InspectorView />
+    <BT_SplitView fixed-pane-initial-dimension="250">
+        <ui:VisualElement name="left-panel" style="flex-grow: 1; max-width: 50%; min-width: 250px;">
+            <ui:Label tabindex="-1" text="Inspector" parse-escape-sequences="true" display-tooltip-when-elided="true" name="panelTitle" />
+            <BT_InspectorView style="padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px;" />
         </ui:VisualElement>
-        <ui:VisualElement name="right-panel" style="flex-grow: 1;">
-            <ui:Label tabindex="-1" text="Label" parse-escape-sequences="true" display-tooltip-when-elided="true" name="panelTitle" />
+        <ui:VisualElement name="right-panel" style="flex-grow: 1; min-width: 50%;">
+            <ui:Label tabindex="-1" text="TreeView" parse-escape-sequences="true" display-tooltip-when-elided="true" name="panelTitle" />
             <BehaviourTreeView style="flex-grow: 1;" />
         </ui:VisualElement>
     </BT_SplitView>
