--- a/Assets/BehaviourTree/Editor/NodeViewEditor.uss
+++ b/Assets/BehaviourTree/Editor/NodeViewEditor.uss
@@ -13,10 +13,10 @@
 #selection-border {
     transition-duration: 100ms;
     position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
+    left: 1;
+    top: 1;
+    right: 1;
+    bottom: 1;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -36,8 +36,24 @@
 
 #input {
     align-items: center;
+    align-self: center;
+    justify-content: center;
 }
 
 #output {
     align-items: center;
+    align-self: center;
+    justify-content: center;
+}
+
+.onSelected {
+    border-left-color: rgba(212, 136, 83, 0);
+    border-right-color: rgba(212, 136, 83, 0);
+    border-top-color: rgba(212, 136, 83, 0);
+    border-bottom-color: rgba(212, 136, 83, 0);
+    transition-duration: 250ms;
+    border-top-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 2px;
+    border-left-width: 2px;
 }
