--- a/Assets/BehaviourTree/Editor/NodeViewEditor.uss
+++ b/Assets/BehaviourTree/Editor/NodeViewEditor.uss
@@ -1,13 +1,17 @@
 #node-border {
     background-color: rgb(56, 56, 56);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     padding-top: 5px;
     padding-right: 5px;
     padding-bottom: 5px;
     padding-left: 5px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    margin-top: -1px;
+    margin-right: -1px;
+    margin-bottom: -1px;
+    margin-left: -1px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
 }
 
 #selection-border {
@@ -17,10 +21,10 @@
     top: 1;
     right: 1;
     bottom: 1;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
 }
 
 :hover > #selection-border {
@@ -56,4 +60,57 @@
     border-right-width: 2px;
     border-bottom-width: 2px;
     border-left-width: 2px;
+}
+
+.running {
+    border-top-width: 3px;
+    border-right-width: 3px;
+    border-bottom-width: 3px;
+    border-left-width: 3px;
+    border-left-color: rgba(0, 205, 255, 0.78);
+    border-right-color: rgba(0, 205, 255, 0.78);
+    border-top-color: rgba(0, 205, 255, 0.78);
+    border-bottom-color: rgba(0, 205, 255, 0.78);
+}
+
+.success {
+    border-left-color: rgba(4, 255, 56, 0.78);
+    border-right-color: rgba(4, 255, 56, 0.78);
+    border-top-color: rgba(4, 255, 56, 0.78);
+    border-bottom-color: rgba(4, 255, 56, 0.78);
+    border-top-width: 3px;
+    border-right-width: 3px;
+    border-bottom-width: 3px;
+    border-left-width: 3px;
+    display: flex;
+}
+
+.failure {
+    border-left-color: rgba(255, 47, 47, 0.78);
+    border-right-color: rgba(255, 47, 47, 0.78);
+    border-top-color: rgba(255, 47, 47, 0.78);
+    border-bottom-color: rgba(255, 47, 47, 0.78);
+    border-top-width: 3px;
+    border-right-width: 3px;
+    border-bottom-width: 3px;
+    border-left-width: 3px;
+}
+
+BT_NodeView {
+    transition-property: border-color;
+    border-top-width: 5px;
+    border-right-width: 5px;
+    border-bottom-width: 5px;
+    border-left-width: 5px;
+}
+
+.BT_NodeView {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
 }
