--- a/Assets/ItemEditor/Editor/ItemEditorWindow.uxml
+++ b/Assets/ItemEditor/Editor/ItemEditorWindow.uxml
@@ -1,17 +1,23 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/ItemEditor/Editor/ItemEditorWindow.uss?fileID=7433441132597879392&amp;guid=8240ed1c37c298c4fb87065ad94271f1&amp;type=3#ItemEditorWindow" />
-    <ItemSplitView>
-        <ui:VisualElement name="Left" style="min-width: 20%;">
-            <ItemInspectorView />
+    <ui:VisualElement name="ItemHeader" style="width: 100%; height: 30px; background-color: rgb(60, 60, 60); flex-direction: row; padding-top: 2px; padding-right: 5px; padding-bottom: 2px; padding-left: 5px; justify-content: flex-end; align-items: center;">
+        <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="ReloadBtn" style="border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; width: 25px; height: 25px;" />
+    </ui:VisualElement>
+    <ItemSplitView fixed-pane-initial-dimension="175">
+        <ui:VisualElement name="Left" style="min-width: 20%; width: 0;">
+            <ui:Label tabindex="-1" text="Inspector" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Header" style="background-color: rgb(37, 37, 37);" />
+            <ItemInspectorView style="padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px;" />
         </ui:VisualElement>
         <ui:VisualElement name="Right" style="flex-grow: 0; min-width: 70%;">
-            <ItemSplitView>
+            <ItemSplitView fixed-pane-initial-dimension="250">
                 <ui:VisualElement name="Left" style="min-width: 50%;">
-                    <ItemEditorView>
-                        <ui:ScrollView />
+                    <ui:Label tabindex="-1" text="ItemView" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Header" style="background-color: rgb(37, 37, 37);" />
+                    <ItemEditorView style="padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px;">
+                        <ui:ScrollView style="min-height: 300px;" />
                     </ItemEditorView>
                 </ui:VisualElement>
                 <ui:VisualElement name="Right" style="min-width: 200px; flex-grow: 0;">
+                    <ui:Label tabindex="-1" text="ItemResource" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Header" style="background-color: rgb(37, 37, 37);" />
                     <ItemResourceView />
                 </ui:VisualElement>
             </ItemSplitView>
