--- a/Assets/ItemEditor/Editor/ItemEditorWindow.uxml
+++ b/Assets/ItemEditor/Editor/ItemEditorWindow.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/ItemEditor/Editor/ItemEditorWindow.uss?fileID=7433441132597879392&amp;guid=8240ed1c37c298c4fb87065ad94271f1&amp;type=3#ItemEditorWindow" />
-    <ui:VisualElement name="ItemHeader" style="width: 100%; height: 30px; background-color: rgb(60, 60, 60); flex-direction: row; padding-top: 2px; padding-right: 5px; padding-bottom: 2px; padding-left: 5px; justify-content: flex-end; align-items: center;">
-        <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="ReloadBtn" style="border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; width: 25px; height: 25px;" />
+    <ui:VisualElement name="ItemHeader" style="width: 100%; height: 30px; background-color: rgb(60, 60, 60); flex-direction: row; padding-top: 2px; padding-right: 5px; padding-bottom: 2px; padding-left: 5px; justify-content: flex-end; align-items: center; display: none;">
+        <ui:VisualElement name="ReloadBtn" />
     </ui:VisualElement>
     <ItemSplitView fixed-pane-initial-dimension="175">
         <ui:VisualElement name="Left" style="min-width: 20%; width: 0;">
