--- a/Assets/BehaviourTree/Editor/BehaviourTreeEditor.uxml
+++ b/Assets/BehaviourTree/Editor/BehaviourTreeEditor.uxml
@@ -3,18 +3,18 @@
     <uie:Toolbar>
         <uie:ToolbarMenu tabindex="-1" parse-escape-sequences="true" display-tooltip-when-elided="true" text="Assets" />
     </uie:Toolbar>
-    <BT_SplitView fixed-pane-initial-dimension="250">
+    <Chipmunk.Library.BehaviourTreeEditor.BT_SplitView fixed-pane-initial-dimension="250">
         <ui:VisualElement name="left-panel" style="flex-grow: 1; max-width: 50%; min-width: 250px;">
             <ui:Label tabindex="-1" text="Inspector" parse-escape-sequences="true" display-tooltip-when-elided="true" name="panelTitle" />
-            <BT_InspectorViewHeader style="flex-direction: row; padding-top: 5px; padding-right: 8px; padding-bottom: 5px; padding-left: 8px; visibility: visible; border-bottom-width: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); display: flex;">
+            <Chipmunk.Library.BehaviourTreeEditor.BT_InspectorViewHeader>
                 <ui:VisualElement style="width: 30px; height: 30px; background-image: url(&quot;project://database/Assets/BehaviourTree/Editor/Resource/node.png?fileID=2800000&amp;guid=a7aa3eee6280990468fbb0022c0949e6&amp;type=3#node&quot;); visibility: visible;" />
                 <ui:Label tabindex="-1" text="Node Name" parse-escape-sequences="true" display-tooltip-when-elided="true" style="visibility: visible; -unity-text-align: middle-left; -unity-font-style: bold; font-size: 16px; flex-grow: 1; padding-top: 0; padding-right: 10px; padding-bottom: 0; padding-left: 10px;" />
-            </BT_InspectorViewHeader>
-            <BT_InspectorView style="padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; flex-grow: 1;" />
+            </Chipmunk.Library.BehaviourTreeEditor.BT_InspectorViewHeader>
+            <Chipmunk.Library.BehaviourTreeEditor.BT_InspectorView />
         </ui:VisualElement>
         <ui:VisualElement name="right-panel" style="flex-grow: 1; min-width: 50%;">
             <ui:Label tabindex="-1" text="TreeView" parse-escape-sequences="true" display-tooltip-when-elided="true" name="panelTitle" />
-            <BehaviourTreeView style="flex-grow: 1;" />
+            <Chipmunk.Library.BehaviourTreeEditor.BehaviourTreeView name="BehaviourTreeView" />
         </ui:VisualElement>
-    </BT_SplitView>
+    </Chipmunk.Library.BehaviourTreeEditor.BT_SplitView>
 </ui:UXML>
