--- a/Assets/ItemEditor/Editor/ItemEditorWindow.uxml
+++ b/Assets/ItemEditor/Editor/ItemEditorWindow.uxml
@@ -3,24 +3,24 @@
     <ui:VisualElement name="ItemHeader" style="width: 100%; height: 30px; background-color: rgb(60, 60, 60); flex-direction: row; padding-top: 2px; padding-right: 5px; padding-bottom: 2px; padding-left: 5px; justify-content: flex-end; align-items: center; display: none;">
         <ui:VisualElement name="ReloadBtn" />
     </ui:VisualElement>
-    <ItemSplitView fixed-pane-initial-dimension="175">
+    <Chipmunk.Library.ItemEditor.ItemSplitView fixed-pane-initial-dimension="200">
         <ui:VisualElement name="Left" style="min-width: 20%; width: 0;">
             <ui:Label tabindex="-1" text="Inspector" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Header" style="background-color: rgb(37, 37, 37);" />
-            <ItemInspectorView style="padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px;" />
+            <Chipmunk.Library.ItemEditor.ItemInspectorView />
         </ui:VisualElement>
         <ui:VisualElement name="Right" style="flex-grow: 0; min-width: 70%;">
-            <ItemSplitView fixed-pane-initial-dimension="250">
+            <Chipmunk.Library.ItemEditor.ItemSplitView fixed-pane-initial-dimension="250">
                 <ui:VisualElement name="Left" style="min-width: 50%;">
                     <ui:Label tabindex="-1" text="ItemView" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Header" style="background-color: rgb(37, 37, 37);" />
-                    <ItemEditorView style="padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px;">
+                    <Chipmunk.Library.ItemEditor.ItemEditorView>
                         <ui:ScrollView style="min-height: 300px;" />
-                    </ItemEditorView>
+                    </Chipmunk.Library.ItemEditor.ItemEditorView>
                 </ui:VisualElement>
                 <ui:VisualElement name="Right" style="min-width: 200px; flex-grow: 0;">
                     <ui:Label tabindex="-1" text="ItemResource" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Header" style="background-color: rgb(37, 37, 37);" />
-                    <ItemResourceView />
+                    <Chipmunk.Library.ItemEditor.ItemResourceView />
                 </ui:VisualElement>
-            </ItemSplitView>
+            </Chipmunk.Library.ItemEditor.ItemSplitView>
         </ui:VisualElement>
-    </ItemSplitView>
+    </Chipmunk.Library.ItemEditor.ItemSplitView>
 </ui:UXML>
