--- a/Assets/PoolEditor/Editor/PoolEditorWindow.uxml
+++ b/Assets/PoolEditor/Editor/PoolEditorWindow.uxml
@@ -1,4 +1,9 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/PoolEditor/Editor/PoolEditorWindow.uss?fileID=7433441132597879392&amp;guid=3b5c665326d95b44fbc4158a16f7609e&amp;type=3#PoolEditorWindow" />
-    <uie:ObjectField label="Object Field" type="UnityEditor.DefaultAsset, UnityEditor.CoreModule" />
+    <Chipmunk.Library.PoolEditor.PoolSplitView>
+        <ui:VisualElement name="Left" style="flex-grow: 1;">
+            <ui:Label tabindex="-1" text="Label" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Header" />
+        </ui:VisualElement>
+        <ui:VisualElement name="Right" style="flex-grow: 1;" />
+    </Chipmunk.Library.PoolEditor.PoolSplitView>
 </ui:UXML>
