--- a/Assets/ItemEditor/Editor/ItemEditorWindow.uss
+++ b/Assets/ItemEditor/Editor/ItemEditorWindow.uss
@@ -44,7 +44,6 @@ Button {
     cursor: url("project://database/Assets/ItemEditor/Editor/Resource/HandCorsor.png?fileID=2800000&guid=1705784ebdb124443b441d60224068d2&type=3#HandCorsor") 250 0;
     margin-top: 2px;
     margin-left: -60px;
-
     right: 0;
 }
 
@@ -63,4 +62,18 @@ Button {
 
 .ResourceViewParent {
     width: 100%;
+}
+
+ItemInspectorView {
+    padding-top: 2px;
+    padding-right: 6px;
+    padding-bottom: 2px;
+    padding-left: 15px;
+}
+
+ItemEditorView {
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
