--- a/Assets/PoolEditor/Editor/PoolEditorWindow.uss
+++ b/Assets/PoolEditor/Editor/PoolEditorWindow.uss
@@ -6,15 +6,42 @@
     padding-left: 7px;
 }
 
+.OnSelected {
+    border-left-color: rgb(212, 136, 83);
+    border-right-color: rgb(212, 136, 83);
+    border-top-color: rgb(212, 136, 83);
+    border-bottom-color: rgb(212, 136, 83);
+    border-top-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 2px;
+    border-left-width: 2px;
+}
+
 PoolInspectorView {
+    padding-top: 2px;
+    padding-right: 6px;
+    padding-bottom: 2px;
+    padding-left: 5px;
 }
 
 PoolCreateView {
+    background-color: rgb(60, 60, 60);
+    border-left-color: rgb(26, 26, 26);
+    border-right-color: rgb(26, 26, 26);
+    border-top-color: rgb(26, 26, 26);
+    border-bottom-color: rgb(26, 26, 26);
+    border-bottom-width: 1px;
+    padding-top: 2px;
+    padding-right: 2px;
+    padding-bottom: 2px;
+    padding-left: 2px;
 }
 
 PoolCreateView > Label {
     -unity-text-align: middle-left;
     -unity-font-style: normal;
+    margin-left: 15px;
+    margin-right: 10%;
 }
 
 PoolCreateView > TextField {
@@ -22,7 +49,50 @@ PoolCreateView > TextField {
 }
 
 PoolCreateView > Button {
+    width: 20px;
+    height: 20px;
+    margin-right: 6px;
 }
 
 PoolListView {
+}
+
+PoolView {
+    flex-direction: row;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background-color: rgba(32, 32, 32, 0.78);
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    height: 50px;
+    justify-content: space-between;
+}
+
+PoolView > Label {
+    -unity-text-align: middle-left;
+    font-size: 24px;
+    -unity-font-style: bold;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    margin-left: 5px;
+}
+
+PoolView > Button {
+    width: 25px;
+    height: 25px;
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    display: none;
+    align-self: center;
+    background-color: rgb(204, 45, 45);
+}
+
+PoolView:hover > Button {
+    display: flex;
 }
