--- a/Assets/11.Uis/UXML/PlayerUI.uxml
+++ b/Assets/11.Uis/UXML/PlayerUI.uxml
@@ -1,6 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/11.Uis/USS/PlayerUI.uss?fileID=7433441132597879392&amp;guid=41746eee9bdb7ad429a4f1adb60e164d&amp;type=3#PlayerUI" />
-    <ui:GroupBox name="InventoryUI" class="Center" style="width: 80%; height: 60%;">
-        <ui:VisualElement name="Board" style="width: 100%; align-self: center; height: 100%; background-color: rgb(0, 0, 0); justify-content: flex-end;" />
-    </ui:GroupBox>
+    <Style src="project://database/Assets/11.Uis/USS/InventoryUI.uss?fileID=7433441132597879392&amp;guid=61ee05f07a7da6a4f9469d6551e8234c&amp;type=3#InventoryUI" />
+    <ItemContainerView />
 </ui:UXML>
