--- a/Assets/11.Uis/USS/InventoryUI.uss
+++ b/Assets/11.Uis/USS/InventoryUI.uss
@@ -9,7 +9,17 @@ ItemSlotItemView {
 }
 
 ItemSlotView {
-    width: 1000px;
-    height: 1000px;
-    min-height: 500px;
+    width: 100px;
+    height: 100px;
+}
+
+#ItemVisual {
+    width: 100%;
+    height: 100%;
+}
+
+#ItemCount {
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
