--- a/Assets/11.Uis/USS/InventoryUI.uss
+++ b/Assets/11.Uis/USS/InventoryUI.uss
@@ -1,6 +1,17 @@
+.rowContainer {
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+}
+
 ItemContainerView {
     width: 100%;
-    height: 100%;
+    height: 70%;
+    padding-top: 150px;
+    padding-right: 140px;
+    padding-bottom: 100px;
+    padding-left: 140px;
+    align-items: center;
 }
 
 ItemSlotItemView {
@@ -9,8 +20,15 @@ ItemSlotItemView {
 }
 
 ItemSlotView {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
+    background-image: url("project://database/Assets/04.Sprites/GUI/Inventory.png?fileID=-1219906068&guid=e510916baf3b52249b07817446073df3&type=3#Inventory_7");
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 #ItemVisual {
@@ -22,4 +40,16 @@ ItemSlotView {
     position: absolute;
     bottom: 0;
     right: 0;
+}
+
+#InventoryBackboard {
+    background-image: url("project://database/Assets/04.Sprites/GUI/Inventory.png?fileID=600842382&guid=e510916baf3b52249b07817446073df3&type=3#Inventory_1");
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    width: 70%;
+    height: 80%;
+    margin-top: 5%;
+    align-items: center;
 }
