--- a/Assets/11.Uis/UXML/ContextUI.uxml
+++ b/Assets/11.Uis/UXML/ContextUI.uxml
@@ -1,5 +1,11 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/11.Uis/USS/PlayerUI.uss?fileID=7433441132597879392&amp;guid=41746eee9bdb7ad429a4f1adb60e164d&amp;type=3#PlayerUI" />
     <Style src="project://database/Assets/11.Uis/USS/InventoryUI.uss?fileID=7433441132597879392&amp;guid=61ee05f07a7da6a4f9469d6551e8234c&amp;type=3#InventoryUI" />
-    <ItemContainerView />
+    <Style src="project://database/Assets/11.Uis/USS/HotbarUI.uss?fileID=7433441132597879392&amp;guid=6921bb43ff73fe646a7f9a6b49be2979&amp;type=3#HotbarUI" />
+    <ui:VisualElement name="ContextUI" style="flex-grow: 1; justify-content: center; align-items: center; width: 100%; height: 100%;">
+        <ui:VisualElement name="InventoryBackboard" style="display: flex;">
+            <ItemContainerView name="ItemContainerView" />
+            <HotbarView style="height: 30%; width: 100%; -unity-background-image-tint-color: rgba(255, 255, 255, 0);" />
+        </ui:VisualElement>
+    </ui:VisualElement>
 </ui:UXML>
