--- a/Assets/11.Uis/USS/InventoryUI.uss
+++ b/Assets/11.Uis/USS/InventoryUI.uss
@@ -5,13 +5,20 @@
 }
 
 ItemContainerView {
-    width: 100%;
+    width: 90%;
     height: 70%;
-    padding-top: 150px;
-    padding-right: 140px;
-    padding-bottom: 100px;
-    padding-left: 140px;
+    padding-top: 0;
+    padding-right: 10%;
+    padding-bottom: 0;
+    padding-left: 10%;
     align-items: center;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-shrink: 399;
+    margin-top: 170px;
+    margin-right: 140px;
+    margin-bottom: 100px;
+    margin-left: 140px;
 }
 
 ItemSlotItemView {
