fix ; world TIme UI
*  change Arrow Rotate ease

--- a/Assets/11.Uis/USS/WorldTimeUI.uss
+++ b/Assets/11.Uis/USS/WorldTimeUI.uss
@@ -12,6 +12,7 @@ WorldTimeView {
 WorldTimeView > * {
     transition-property: rotate;
     transition-duration: 500ms;
+    transition-timing-function: ease-in-out-elastic;
 }
 
 WorldTimeView > #timeArrow {
